--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "author": "Ilyasse Fouaide <ilyasse.fouaide@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
